gravitee-apim-portal-webui/src/app/components/gv-page-markdown/gv-page-markdown.component.css
/**
 * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
.attached-resources {
  display: flex;
  align-items: stretch; /* Default */
  width: 100%;
  margin: 0;
  padding: 0;
}

.attached-resources li {
  list-style: none;
}

.markdown {
  overflow: auto;
}

.with-toc .markdown-content {
  max-width: calc(100% - 250px - 1rem);
  flex: 1;
  box-sizing: border-box;
}

.markdown-content {
  background-color: var(--gv-page-markdown--bgc, var(--gv-theme-neutral-color-lightest));
  padding: var(--gv-page-markdown--p, 2rem 4rem);
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.markdown.with-toc {
  display: flex;
}
:host ::ng-deep code {
  max-width: 100%;
  display: inline;
  overflow: auto;
  word-wrap: break-word;
  overflow-wrap: break-word;
  white-space: pre-wrap;
}

app-gv-markdown-toc {
  position: fixed;
  right: 42px;
}

/* (1440x900) WXGA+ Display */
@media screen and (max-width: 1440px) {
  app-gv-markdown-toc {
    right: 5px;
  }

  .page__box-content {
    padding: var(--gv-page-markdown--p, 2rem);
  }
}

:host ::ng-deep img {
  max-width: 100%;
}

:host ::ng-deep gv-button {
  vertical-align: baseline;
}

:host ::ng-deep table {
  border: 1px solid var(--gv-theme-font-color-dark, #262626);
  margin: 12px 0 14px;
  color: var(--gv-theme-font-color-dark, #262626);
  width: auto;
  border-collapse: collapse;
  box-sizing: border-box;
}

:host ::ng-deep table th,
:host ::ng-deep table td {
  border: 1px solid var(--gv-theme-neutral-color-dark, #efefef);
  padding: 5px 14px 5px 12px;
  height: 32px;
}

:host ::ng-deep table th {
  background-color: var(--gv-theme-color-dark, #28444f);
  font-weight: 300;
  color: var(--gv-theme-font-color-light, #ffffff);
  padding-top: 6px;
}

